# backend/docs/swagger.json
@@ -5,56 +5,25 @@
         "title": "Academic System",
         "contact": {},
         "license": {},
-        "version": "1.1"
+        "version": "1.2"
     },
     "basePath": "/api/v1",
     "paths": {
         "/course": {
             "get": {
-                "description": "获取课程 可以自由添加筛选属性",
+                "description": "获取所有课程",
                 "tags": [
                     "course"
                 ],
-                "summary": "获取课程",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "example": 4,
-                        "description": "学分",
-                        "name": "credit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "院系号",
-                        "name": "department_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "数据库原理",
-                        "description": "课名",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "0121",
-                        "description": "课号",
-                        "name": "number",
-                        "in": "query"
-                    }
-                ],
+                "summary": "获取所有课程",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.CourseRes"
+                            }
                         }
                     }
                 }
@@ -72,7 +41,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Course"
+                            "$ref": "#/definitions/model.CourseCreateReq"
                         }
                     }
                 ],
@@ -112,23 +81,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Course"
+                            "$ref": "#/definitions/model.CourseRes"
                         }
                     }
                 }
             },
-            "put": {
-                "description": "整体更新课程信息",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
+            "delete": {
+                "description": "根据id删除课程",
                 "tags": [
                     "course"
                 ],
-                "summary": "整体更新课程信息",
+                "summary": "根据id删除课程",
                 "parameters": [
                     {
                         "type": "integer",
@@ -136,15 +99,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "course 实例",
-                        "name": "course",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Course"
-                        }
                     }
                 ],
                 "responses": {
@@ -429,7 +383,7 @@
                 ],
                 "tags": [
                     "student",
-                    "course"
+                    "offered_course"
                 ],
                 "summary": "获取指定学生的所有课程",
                 "parameters": [
@@ -608,7 +562,7 @@
                 ],
                 "tags": [
                     "teacher",
-                    "course"
+                    "offered_course"
                 ],
                 "summary": "获取指定教师的所有开课课程",
                 "parameters": [
@@ -628,6 +582,23 @@
                             "items": {
                                 "$ref": "#/definitions/model.OfferedCourseRes"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/test/delete-all": {
+            "delete": {
+                "description": "删除全部数据 没用",
+                "tags": [
+                    "test"
+                ],
+                "summary": "删除全部数据 没用",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -669,30 +640,42 @@
         }
     },
     "definitions": {
-        "model.Course": {
+        "model.CourseCreateReq": {
             "type": "object",
             "properties": {
                 "credit": {
-                    "description": "学分",
-                    "type": "integer",
-                    "example": 4
+                    "type": "integer"
                 },
-                "department_id": {
+                "departmentID": {
                     "description": "院系号",
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CourseRes": {
+            "type": "object",
+            "properties": {
+                "credit": {
+                    "type": "integer"
+                },
+                "department_name": {
+                    "description": "院系名",
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
-                    "description": "课名",
-                    "type": "string",
-                    "example": "数据库原理"
+                    "type": "string"
                 },
                 "number": {
-                    "description": "课号",
-                    "type": "string",
-                    "example": "0121"
+                    "type": "string"
                 }
             }
         },
@@ -857,6 +840,9 @@
                 "age": {
                     "type": "integer"
                 },
+                "departmentID": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -898,6 +884,9 @@
             "type": "object",
             "properties": {
                 "age": {
+                    "type": "integer"
+                },
+                "departmentID": {
                     "type": "integer"
                 },
                 "name": {
