# backend/router/api/v1/test.go
@@ -1,9 +1,11 @@
 package v1
 
 import (
+	"academic-system/global"
 	"academic-system/model"
 	"academic-system/service"
 	"github.com/gin-gonic/gin"
+	"log"
 	"net/http"
 )
 
@@ -30,11 +32,37 @@ func GenerateExamples(c *gin.Context) {
 	model.CreateDepartmentsExample()
 	service.CreateStudentsExample()
 	service.CreateTeachersExample()
-	model.CreateCoursesExample()
+	service.CreateCoursesExample()
 	model.CreateOfferedCoursesExample()
 	model.CreateSelectionsExample()
 
-	c.JSON(http.StatusOK, gin.H{
-		"message": "已生成样例数据",
-	})
+	model.OkWithMessage("生成样例数据成功", c)
+}
+
+// DeleteAll godoc
+// @Summary      删除全部数据
+// @Description  删除全部数据
+// @Tags         test
+// @Success      200  {string} string
+// @Router       /test/delete-all [delete]
+func DeleteAll(c *gin.Context) {
+	// model.DeleteAllDepartments()
+	// service.DeleteAllStudents()
+	// service.DeleteAllTeachers()
+	// service.DeleteAllCourses()
+	// model.DeleteAllOfferedCourse()
+	// model.DeleteAllSelections()
+	err := global.DB.Migrator().DropTable(&model.Department{}, &model.Course{}, &model.Teacher{}, &model.OfferedCourse{},
+		&model.Student{}, &model.Selection{})
+	if err != nil {
+		log.Fatalf(err.Error())
+	}
+	err = global.DB.AutoMigrate(
+		&model.Department{}, &model.Course{}, &model.Teacher{}, &model.OfferedCourse{},
+		&model.Student{}, &model.Selection{})
+	if err != nil {
+		log.Fatalf(err.Error())
+	}
+
+	model.OkWithMessage("数据库清空完成", c)
 }
